package c2s_user;
syntax = "proto3";

import "./share_structure.proto";

// login
message login {
    required string name = 1;  // name, ommited
    required string uid = 2; // uid from verify result
    required string token = 3; // token from verify result
}

// create player, only 1 plyaer per user
message create_player {
    required string pname = 1;  // player name
    required uint32 gender = 2; // player gender, 0=unknown, 1=male, 2=female
}

// enter game
message enter_game {

}

// ----------------------------------------------------------------------------

// get transactions info
message get_pending {
    
}

// upload pending txhash
message upload_pending {
    required string txhash = 1; // pending transaction hash
    required string txtype = 2; // pending transaction type
}

// get pending history
message get_pending_history {
    required uint32 page = 1; // page
    required uint32 size = 2; // size
}

// get block height
message get_block_height {
    
}

// ----------------------------------------------------------------------------

message player_move {
    required string pioneerId = 1;
    required string movePath = 2; 
    required string targetPos = 3; 
}

// ----------------------------------------------------------------------------

message save_archives {
    required string archives = 1;
}
